--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,13 +10,17 @@ readme = "README.md"
 requires-python = ">=3.13"
 license = { text = "Apache-2.0" }
 authors = [
-    { name = "Your Name", email = "your@email.com" },
+    { name = "Jonathan Woodbury", email = "jpwoodbu@gmail.com" },
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3.13",
+]
+dependencies = [
+    "wyoming",
+    "nemo_toolkit[asr]",
 ]
 
 [project.urls]
