Narrow down the problem space
`xpu_available.py` was added as a minimum bit of code that will only
work if the XPU torch library is installed and working.

It still cannot find libsycl.so.8.

--- a/src/wyoming_nemo_parakeet/BUILD.bazel
+++ b/src/wyoming_nemo_parakeet/BUILD.bazel
@@ -40,3 +40,11 @@ py_binary(
         xpu_requirement("wyoming"),
     ],
 )
+
+py_binary(
+    name = "xpu_available",
+    srcs = ["xpu_available.py"],
+    deps = [
+        xpu_requirement("torch"),
+    ],
+)
