Switch to Aspect Python rules
This was only done to make use of their `py_binary.venv` rule which creates a venv that vscode can reference for various editor features.

--- a/src/wyoming_nemo_parakeet/BUILD.bazel
+++ b/src/wyoming_nemo_parakeet/BUILD.bazel
@@ -1,6 +1,6 @@
 load("@pip//:requirements.bzl", "requirement")
-load("@rules_python//python:defs.bzl", "py_binary", "py_library")
 load("@rules_python//python:pip.bzl", "compile_pip_requirements")
+load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library")
 
 compile_pip_requirements(
     name = "requirements",
