--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -3,6 +3,7 @@
 module(name = "wyoming_nemo_parakeet")
 
 bazel_dep(name = "rules_python", version = "1.8.0")
+bazel_dep(name = "aspect_rules_py", version = "1.8.4")
 
 python = use_extension("@rules_python//python/extensions:python.bzl", "python")
 python.toolchain(
