--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -4,6 +4,7 @@ module(name = "wyoming_nemo_parakeet")
 
 bazel_dep(name = "rules_python", version = "1.8.0")
 bazel_dep(name = "aspect_rules_py", version = "1.8.4")
+bazel_dep(name = "rules_pkg", version = "1.2.0")
 
 python = use_extension("@rules_python//python/extensions:python.bzl", "python")
 python.toolchain(
@@ -12,6 +13,7 @@ python.toolchain(
 use_repo(python, "python_3_13")
 
 pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
+
 # Repo providing PyTorch for Intel hardware (e.g. GPUs) with fallback to the
 # default PyPI hub. This is so nemo-toolkit can be installed nominally from the
 # XPU repo, bringing in its torch dependency from the XPU repo, but in the event
