--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
-  wyoming-nemo-parakeet:
-    image: jpwoodbu/wyoming-nemo-parakeet:latest
-    container_name: wyoming-nemo-parakeet
+  wyoming-parakeet:
+    image: jpwoodbu/wyoming-parakeet:latest
+    container_name: wyoming-parakeet
     restart: unless-stopped
     ports:
       - "10300:10300"
