Switch to onnx-asr
This change drops using NVIDIA NeMo for execution. Running on `onnx-asr` uses far less disk space and generally has better ergonomics as NeMo seems to be designed for development and training and `onnx-asr` seems to be designed for deployment.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ classifiers = [
 ]
 dependencies = [
     "wyoming==1.8.0",
-    "nemo_toolkit[asr]==2.6.1",
+    "onnx-asr[cpu,hub]",
 ]
 
 [project.urls]
